[package]
name = "e_2022_83"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# primal = "0.3"
# itertools = "0.10"
# num = "0.4"
# math_arsenal = { path = "/home/lemark/Projets/rust/math_arsenal/" }
nalgebra = "0.31.1" # replace * by the latest version of the crate.

[profile.dev]
opt-level = 3
