[package]
name = "e_2022_98"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# primal = "0.3"
digits_iterator = "0.1.0"
itertools = "0.10"
indicatif = "0.17.0"
# num = "0.4"
# math_arsenal = { path = "/home/lemark/Projets/rust/math_arsenal/" }

[profile.dev]
opt-level = 3
